[gd_scene load_steps=8 format=3 uid="uid://r2myuuyyxtra"]

[ext_resource type="Script" path="res://scripts/menus/settings_menu.gd" id="1_3f486"]
[ext_resource type="FontFile" uid="uid://cahhshh5yubg0" path="res://assets/Lacquer-Regular.ttf" id="2_dm021"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1gwt"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g55bm"]
bg_color = Color(1, 0, 0.0666667, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o0adj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f3b8v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iw8e4"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3f486")

[node name="bg" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="mouse" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="mouse_sens_label" type="Label" parent="mouse"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 779.0
offset_top = 64.0
offset_right = 1177.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
text = "Mouse Sensitivity"

[node name="mouse_sens" type="Label" parent="mouse"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 977.5
offset_top = 173.0
offset_right = 978.5
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="mouse_sens_slider" type="HSlider" parent="mouse"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 820.5
offset_top = 140.5
offset_right = 1135.5
offset_bottom = 167.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_u1gwt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_g55bm")
value = 1.0

[node name="film_grain" type="Control" parent="."]
anchors_preset = 0
offset_left = 123.0
offset_right = 163.0
offset_bottom = 40.0

[node name="film_grain_label" type="Label" parent="film_grain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 726.0
offset_top = 286.0
offset_right = 965.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
text = "Film Grain"

[node name="film_grain" type="CheckButton" parent="film_grain"]
texture_filter = 5
layout_mode = 1
anchors_preset = -1
anchor_left = 0.534
anchor_top = 0.533
anchor_right = 0.534
anchor_bottom = 0.533
offset_left = 771.64
offset_top = 359.68
offset_right = 815.64
offset_bottom = 383.68
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_o0adj")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_f3b8v")
button_pressed = true

[node name="button_white" type="Control" parent="film_grain"]
anchors_preset = 0
offset_left = 77.0
offset_top = -400.0
offset_right = 117.0
offset_bottom = -360.0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 773.0
offset_top = 796.0
offset_right = 818.0
offset_bottom = 838.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect2" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 815.0
offset_top = 805.0
offset_right = 827.0
offset_bottom = 829.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect3" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 815.0
offset_top = 799.0
offset_right = 821.0
offset_bottom = 835.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect4" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 818.0
offset_top = 802.0
offset_right = 824.0
offset_bottom = 832.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect5" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 749.0
offset_top = 796.0
offset_right = 773.0
offset_bottom = 802.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect6" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 761.0
offset_top = 799.0
offset_right = 785.0
offset_bottom = 805.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect7" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 767.0
offset_top = 802.0
offset_right = 791.0
offset_bottom = 808.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect8" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 770.0
offset_top = 808.0
offset_right = 794.0
offset_bottom = 814.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect9" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 770.0
offset_top = 820.0
offset_right = 794.0
offset_bottom = 826.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect10" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 767.0
offset_top = 826.0
offset_right = 791.0
offset_bottom = 832.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect11" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 761.0
offset_top = 829.0
offset_right = 785.0
offset_bottom = 835.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect12" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 750.0
offset_top = 832.0
offset_right = 774.0
offset_bottom = 838.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect13" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 737.0
offset_top = 805.0
offset_right = 743.0
offset_bottom = 829.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect14" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 740.0
offset_top = 802.0
offset_right = 746.0
offset_bottom = 814.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect15" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 743.0
offset_top = 799.0
offset_right = 749.0
offset_bottom = 808.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect16" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 746.0
offset_top = 796.0
offset_right = 755.0
offset_bottom = 805.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect17" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 746.0
offset_top = 829.0
offset_right = 755.0
offset_bottom = 838.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect18" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 743.0
offset_top = 826.0
offset_right = 749.0
offset_bottom = 835.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="ColorRect19" type="ColorRect" parent="film_grain/button_white"]
layout_mode = 0
offset_left = 740.0
offset_top = 820.0
offset_right = 746.0
offset_bottom = 832.0
mouse_filter = 2
color = Color(0.203322, 0.203322, 0.203322, 1)

[node name="button_red" type="Control" parent="film_grain"]
anchors_preset = 0
offset_left = 77.0
offset_top = -400.0
offset_right = 117.0
offset_bottom = -360.0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 746.0
offset_top = 796.0
offset_right = 791.0
offset_bottom = 838.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect6" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 749.0
offset_top = 796.0
offset_right = 794.0
offset_bottom = 814.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect7" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 749.0
offset_top = 796.0
offset_right = 794.0
offset_bottom = 814.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect8" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 749.0
offset_top = 820.0
offset_right = 794.0
offset_bottom = 838.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect9" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 752.0
offset_top = 826.0
offset_right = 797.0
offset_bottom = 838.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect10" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 758.0
offset_top = 829.0
offset_right = 803.0
offset_bottom = 838.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect11" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 773.0
offset_top = 832.0
offset_right = 818.0
offset_bottom = 838.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect12" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 773.0
offset_top = 796.0
offset_right = 818.0
offset_bottom = 802.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect13" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 752.0
offset_top = 802.0
offset_right = 797.0
offset_bottom = 808.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect14" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 758.0
offset_top = 799.0
offset_right = 803.0
offset_bottom = 805.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect15" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 809.0
offset_top = 799.0
offset_right = 821.0
offset_bottom = 805.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect16" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 809.0
offset_top = 799.0
offset_right = 821.0
offset_bottom = 805.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect17" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 815.0
offset_top = 802.0
offset_right = 824.0
offset_bottom = 808.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect18" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 818.0
offset_top = 805.0
offset_right = 827.0
offset_bottom = 814.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect19" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 818.0
offset_top = 820.0
offset_right = 827.0
offset_bottom = 829.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect20" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 815.0
offset_top = 826.0
offset_right = 824.0
offset_bottom = 832.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect21" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 809.0
offset_top = 829.0
offset_right = 821.0
offset_bottom = 835.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect22" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 821.0
offset_top = 814.0
offset_right = 827.0
offset_bottom = 820.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 743.0
offset_top = 799.0
offset_right = 780.0
offset_bottom = 835.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 743.0
offset_top = 802.0
offset_right = 777.0
offset_bottom = 832.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 740.0
offset_top = 802.0
offset_right = 774.0
offset_bottom = 832.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect5" type="ColorRect" parent="film_grain/button_red"]
layout_mode = 0
offset_left = 737.0
offset_top = 805.0
offset_right = 771.0
offset_bottom = 829.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="audio_settings" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="master_audio_label" type="Label" parent="audio_settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = 72.0
offset_right = 338.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
text = "Master Audio"

[node name="master_audio" type="Label" parent="audio_settings"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 184.0
offset_top = 173.0
offset_right = 185.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="master_audio_slider" type="HSlider" parent="audio_settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = 140.5
offset_right = 342.0
offset_bottom = 167.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_u1gwt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_g55bm")
min_value = 1.0
value = 1.0

[node name="music_audio_label" type="Label" parent="audio_settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 419.0
offset_top = 72.0
offset_right = 677.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
text = "Music Audio"

[node name="music_audio" type="Label" parent="audio_settings"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 542.0
offset_top = 173.0
offset_right = 543.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="music_audio_slider" type="HSlider" parent="audio_settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 385.0
offset_top = 140.5
offset_right = 700.0
offset_bottom = 167.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_u1gwt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_g55bm")
min_value = 1.0
value = 1.0

[node name="sfx_audio_label" type="Label" parent="audio_settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = 298.0
offset_right = 299.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
text = "SFX Audio"

[node name="sfx_audio" type="Label" parent="audio_settings"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 180.0
offset_top = 399.0
offset_right = 181.0
offset_bottom = 459.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="sfx_audio_slider" type="HSlider" parent="audio_settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = 366.5
offset_right = 338.0
offset_bottom = 393.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_u1gwt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_g55bm")
min_value = 1.0
value = 1.0

[node name="menu_audio_label" type="Label" parent="audio_settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 433.0
offset_top = 298.0
offset_right = 652.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
text = "Menu Audio"

[node name="menu_audio" type="Label" parent="audio_settings"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 533.0
offset_top = 399.0
offset_right = 534.0
offset_bottom = 459.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="menu_audio_slider" type="HSlider" parent="audio_settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 376.0
offset_top = 366.5
offset_right = 691.0
offset_bottom = 393.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_u1gwt")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_g55bm")
min_value = 1.0
value = 1.0

[node name="back_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = 237.0
offset_right = 59.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0195435
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.469494, 0.401435, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dm021")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_iw8e4")
text = "Back"
flat = true

[connection signal="drag_ended" from="mouse/mouse_sens_slider" to="." method="_on_mouse_sens_slider_drag_ended"]
[connection signal="pressed" from="film_grain/film_grain" to="." method="_on_film_grain_pressed"]
[connection signal="value_changed" from="audio_settings/master_audio_slider" to="." method="_on_master_audio_slider_value_changed"]
[connection signal="value_changed" from="audio_settings/music_audio_slider" to="." method="_on_music_audio_slider_value_changed"]
[connection signal="value_changed" from="audio_settings/sfx_audio_slider" to="." method="_on_sfx_audio_slider_value_changed"]
[connection signal="value_changed" from="audio_settings/menu_audio_slider" to="." method="_on_menu_audio_slider_value_changed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
